--- a/csgo/cfg/csgo-squirrel-mod/makemapentities.cfg
+++ b/csgo/cfg/csgo-squirrel-mod/makemapentities.cfg
@@ -1,1 +1,4 @@
-
+echo [CSM] Making map entities...
+ent_create game_player_equip SquirrelMod_PlayerEquip
+ent_create point_servercommand SquirrelMod_ServerCommand
+echo [CSM] Finished making map entities!
