--- a/csgo/cfg/csgo-squirrel-mod/main.cfg
+++ b/csgo/cfg/csgo-squirrel-mod/main.cfg
@@ -1,2 +1,4 @@
-script_execute csgo-squirrel-mod/src/functions.nut
+echo [CSM] Setup started...
+script_execute csgo-squirrel-mod/src/functions
 exec csgo-squirrel-mod/makemapentities
+echo [CSM] Finished setup!
