--- a/csgo/cfg/csgo-squirrel-mod/main.cfg
+++ b/csgo/cfg/csgo-squirrel-mod/main.cfg
@@ -1,3 +1,4 @@
 echo [CSM] Setup started...
 script_execute csgo-squirrel-mod/src/functions
+exec csgo-squirrel-mod/makemapentities
 echo [CSM] Finished setup!
