--- a/csgo/cfg/csgo-squirrel-mod/makemapentities.cfg
+++ b/csgo/cfg/csgo-squirrel-mod/makemapentities.cfg
@@ -1,6 +1,7 @@
 echo [CSM] Making map entities...
 ent_create game_player_equip targetname SquirrelMod_PlayerEquip
 ent_create point_servercommand targetname SquirrelMod_ServerCommand
+ent_create logic_script targetname SquirrelMod_Script
 ent_create logic_auto targetname SquirrelMod_LogicAuto
 ent_create logic_auto targetname SquirrelMod_TestIfPC
 echo [CSM] Finished making map entities!
