--- a/csgo/cfg/csgo-squirrel-mod/makemapentities.cfg
+++ b/csgo/cfg/csgo-squirrel-mod/makemapentities.cfg
@@ -5,3 +5,7 @@ ent_create logic_script targetname SquirrelMod_Script
 ent_create logic_auto targetname SquirrelMod_LogicAuto
 ent_create logic_auto targetname SquirrelMod_TestIfPC
 echo [CSM] Finished making map entities!
+echo [CSM] Configuring map entities...
+ent_fire SquirrelMod_TestIfPC addoutput globalstate is_pc
+ent_fire SquirrelMod_LogicAuto addoutput OnMapSpawn SquirrelMod_Script RunScriptCode OnMapLoad() 0.00 -1
+echo [CSM] Finished configuring map entities
