--- a/csgo/cfg/csgo-squirrel-mod/makemapentities.cfg
+++ b/csgo/cfg/csgo-squirrel-mod/makemapentities.cfg
@@ -8,4 +8,5 @@ echo [CSM] Finished making map entities!
 echo [CSM] Configuring map entities...
 ent_fire SquirrelMod_TestIfPC addoutput globalstate is_pc
 ent_fire SquirrelMod_LogicAuto addoutput OnMapSpawn SquirrelMod_Script RunScriptCode OnMapLoad() 0.00 -1
+ent_fire SquirrelMod_LogicAuto addoutput OnMultiNewRound SquirrelMod_Script RunScriptCode OnNewRound() 0.00 -1
 echo [CSM] Finished configuring map entities
