--- a/csgo/cfg/csgo-squirrel-mod/makemapentities.cfg
+++ b/csgo/cfg/csgo-squirrel-mod/makemapentities.cfg
@@ -4,6 +4,7 @@ ent_create point_servercommand targetname SquirrelMod_ServerCommand
 ent_create logic_script targetname SquirrelMod_Script
 ent_create logic_auto targetname SquirrelMod_LogicAuto
 ent_create logic_auto targetname SquirrelMod_TestIfPC
+ent_create game_ui targetname SquirrelMod_GameUI
 echo [CSM] Finished making map entities!
 echo [CSM] Configuring map entities...
 ent_fire SquirrelMod_TestIfPC addoutput globalstate is_pc
