--- a/csgo/cfg/csgo-squirrel-mod/main.cfg
+++ b/csgo/cfg/csgo-squirrel-mod/main.cfg
@@ -1,4 +1,5 @@
 echo [CSM] Setup started...
 script_execute csgo-squirrel-mod/src/functions
+script_execute csgo-squirrel-mod/src/util
 exec csgo-squirrel-mod/makemapentities
 echo [CSM] Finished setup!
