--- a/csgo/cfg/csgo-squirrel-mod/main.cfg
+++ b/csgo/cfg/csgo-squirrel-mod/main.cfg
@@ -1,5 +1,7 @@
 echo [CSM] Setup started...
+sv_cheats 1
 script_execute csgo-squirrel-mod/src/functions
 script_execute csgo-squirrel-mod/src/util
-exec csgo-squirrel-mod/makemapentities
+sv_allow_point_servercommand 1
+sv_cheats 0
 echo [CSM] Finished setup!
